examples - correct compile errors

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=arduino-sound-tools
+name=sound-tools
 version=0.0.1
 author=Phil Schatzmann
 maintainer=Phil Schatzmann <phil.schatzmann@gmail.com>
 sentence=Some useful sound processing classes
 paragraph=Timer, RingBuffer, I2S
 category=Device Control
-url=http://www.pchatzmann.ch
+url=https://github.com/pschatzmann/arduino-sound-tools
 architectures=esp32
