--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,4 @@ sentence=Some useful audio processing classes
 paragraph=Timer, RingBuffer, I2S
 category=Device Control
 url=https://github.com/pschatzmann/arduino-audio-tools
-architectures=esp32
+architectures=esp32,mbed_nano
