--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ cmake_minimum_required(VERSION 3.0)
 project(arduino-audio-tools)
 
 # make include directory available to calling projects 
-target_include_directories (MOZZI PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_include_directories (arduino-audio-tools PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
