--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ project(arduino-audio-tools)
 add_library(arduino-audio-tools INTERFACE)
 
 # make include directory available to calling projects 
-target_include_directories (arduino-audio-tools PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_include_directories (arduino-audio-tools INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/src)
