cmake installation support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,10 @@ add_library(arduino-audio-tools INTERFACE)
 
 # make include directory available to calling projects 
 target_include_directories (arduino-audio-tools INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
+# installation of all header files
+install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src/" # source directory
+    DESTINATION "include/arduino-audio-tools" # target directory
+    FILES_MATCHING # install only matched files
+    PATTERN "*.h" # select header files
+)
