--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -24,7 +24,8 @@ if(NOT arduino_emulator_POPULATED)
 endif()
 
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mp3 ${CMAKE_CURRENT_BINARY_DIR}/mp3)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mp3-mini ${CMAKE_CURRENT_BINARY_DIR}/mp3)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mp3-helix ${CMAKE_CURRENT_BINARY_DIR}/mp3-helix)
 
 # cmake missing in https://github.com/pschatzmann/arduino-fdk-aac.git
 #add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/aac ${CMAKE_CURRENT_BINARY_DIR}/aac)
