--- a/tests/aac-helix/CMakeLists.txt
+++ b/tests/aac-helix/CMakeLists.txt
@@ -1,15 +1,14 @@
 cmake_minimum_required(VERSION 3.20)
 
 # set the project name
-project(mp3-helix)
+project(aac-helix)
 set (CMAKE_CXX_STANDARD 11)
 set (DCMAKE_CXX_FLAGS "-Werror")
 set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
 set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
-
 include(FetchContent)
 
-# Build with Portaudio 
+# Build with arduino-fdk-aac
 FetchContent_Declare(helix GIT_REPOSITORY "https://github.com/pschatzmann/arduino-libhelix.git" GIT_TAG main )
 FetchContent_GetProperties(helix)
 if(NOT helix_POPULATED)
@@ -18,13 +17,14 @@ if(NOT helix_POPULATED)
 endif()
 
 # build sketch as executable
-add_executable (mp3-helix mp3-helix.cpp)
+add_executable (aac-helix aac-helix.cpp)
+
 # use main() from arduino_emulator
-target_compile_definitions(mp3-helix PUBLIC -DEXIT_ON_STOP)
+target_compile_definitions(aac-helix PUBLIC -DEXIT_ON_STOP)
 
 # OS/X might need this setting for core audio
 #target_compile_definitions(portaudio PUBLIC -DPA_USE_COREAUDIO=1)
 
 # specify libraries
-target_link_libraries(mp3-helix portaudio_static arduino_emulator arduino_helix arduino-audio-tools)
+target_link_libraries(aac-helix portaudio_static arduino_emulator arduino_helix arduino-audio-tools)
 
