--- a/tests/aac-helix/CMakeLists.txt
+++ b/tests/aac-helix/CMakeLists.txt
@@ -4,8 +4,10 @@ cmake_minimum_required(VERSION 3.20)
 project(aac-helix)
 set (CMAKE_CXX_STANDARD 11)
 set (DCMAKE_CXX_FLAGS "-Werror")
-set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
-set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
+    set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
+endif()
 include(FetchContent)
 
 # Build with arduino-fdk-aac
@@ -26,5 +28,5 @@ target_compile_definitions(aac-helix PUBLIC -DARDUINO -DEXIT_ON_STOP)
 #target_compile_definitions(portaudio PUBLIC -DPA_USE_COREAUDIO=1)
 
 # specify libraries
-target_link_libraries(aac-helix portaudio_static arduino_emulator arduino_helix arduino-audio-tools)
+target_link_libraries(aac-helix portaudio arduino_emulator arduino_helix arduino-audio-tools)
 
