--- a/tests/mp3-lame/CMakeLists.txt
+++ b/tests/mp3-lame/CMakeLists.txt
@@ -4,12 +4,14 @@ cmake_minimum_required(VERSION 3.20)
 project(mp3-lame)
 set (CMAKE_CXX_STANDARD 11)
 set (DCMAKE_CXX_FLAGS "-Werror")
-set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
-set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
+    set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
+endif()
 
 include(FetchContent)
 
-# Build with Portaudio 
+# Build with liblame 
 FetchContent_Declare(arduino_liblame GIT_REPOSITORY "https://github.com/pschatzmann/arduino-liblame.git" GIT_TAG main )
 FetchContent_GetProperties(arduino_liblame)
 if(NOT arduino_liblame_POPULATED)
@@ -23,5 +25,5 @@ add_executable (mp3-lame mp3-lame.cpp)
 target_compile_definitions(mp3-lame PUBLIC -DARDUINO -DEXIT_ON_STOP)
 
 # specify libraries
-target_link_libraries(mp3-lame portaudio_static arduino_emulator arduino_liblame arduino-audio-tools)
+target_link_libraries(mp3-lame arduino_emulator arduino_liblame arduino-audio-tools)
 
