--- a/tests/mp3-mad/CMakeLists.txt
+++ b/tests/mp3-mad/CMakeLists.txt
@@ -22,7 +22,7 @@ endif()
 # build sketch as executable
 add_executable (mp3-mad mp3-mad.cpp)
 # use main() from arduino_emulator
-target_compile_definitions(mp3-mad PUBLIC -DARDUINO -DEXIT_ON_STOP -DIGNORE_DECODERS -DUSE_MAD)
+target_compile_definitions(mp3-mad PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_MAD)
 
 # specify libraries
 target_link_libraries(mp3-mad portaudio arduino_emulator arduino_libmad arduino-audio-tools)
