--- a/tests/mp3-metadata/CMakeLists.txt
+++ b/tests/mp3-metadata/CMakeLists.txt
@@ -14,7 +14,7 @@ endif()
 add_executable (mp3-metadata mp3-metadata.cpp)
 
 # use main() from arduino_emulator
-target_compile_definitions(mp3-metadata PUBLIC -DEXIT_ON_STOP -DIGNORE_DECODERS)
+target_compile_definitions(mp3-metadata PUBLIC -DEXIT_ON_STOP )
 
 # specify libraries
 target_link_libraries(mp3-metadata portaudio arduino_emulator arduino-audio-tools)
