--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,8 @@ version=0.8.0
 author=Phil Schatzmann
 maintainer=Phil Schatzmann <phil.schatzmann@gmail.com>
 sentence=Some useful audio processing classes
-paragraph=Timer, RingBuffer, I2S
-category=Device Control
+paragraph=Arduino Audio Tools (Music Player, Music Recorder supporting I2S, Microphones, DAC, ADC, A2DP, Url), MP3 Player, AAC Player
+category=Signal Input/Output
 url=https://github.com/pschatzmann/arduino-audio-tools
 architectures=*
+depends=I2S
