--- a/tests/aac-fdk/CMakeLists.txt
+++ b/tests/aac-fdk/CMakeLists.txt
@@ -22,7 +22,7 @@ endif()
 add_executable (aac-fdk aac-fdk.cpp)
 
 # use main() from arduino_emulator
-target_compile_definitions(aac-fdk PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_FDK)
+target_compile_definitions(aac-fdk PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_FDK -DUSE_PORTAUDIO -DIS_DESKTOP)
 
 # OS/X might need this setting for core audio
 #target_compile_definitions(portaudio PUBLIC -DPA_USE_COREAUDIO=1)
