--- a/tests/aac-fdk-encode/CMakeLists.txt
+++ b/tests/aac-fdk-encode/CMakeLists.txt
@@ -22,7 +22,7 @@ endif()
 # build sketch as executable
 add_executable (aac-fdk-encode aac-fdk-encode.cpp)
 # use main() from arduino_emulator
-target_compile_definitions(aac-fdk-encode PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_FDK)
+target_compile_definitions(aac-fdk-encode PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_FDK -DIS_DESKTOP)
 
 # specify libraries
 target_link_libraries(aac-fdk-encode arduino_emulator fdk_aac arduino-audio-tools)
