--- a/tests/effects/CMakeLists.txt
+++ b/tests/effects/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 
 # set the project name
-project(mp3-metadata)
+project(effects)
 set (CMAKE_CXX_STANDARD 11)
 set (DCMAKE_CXX_FLAGS "-Werror")
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
@@ -9,13 +9,11 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
 endif()
 
-
 # build sketch as executable
-add_executable (mp3-metadata mp3-metadata.cpp)
-
+add_executable (effects effects.cpp)
 # use main() from arduino_emulator
-target_compile_definitions(mp3-metadata PUBLIC -DEXIT_ON_STOP -DIS_DESKTOP)
+target_compile_definitions(effects PUBLIC -DARDUINO -DEXIT_ON_STOP -DIS_DESKTOP)
 
 # specify libraries
-target_link_libraries(mp3-metadata portaudio arduino_emulator arduino-audio-tools)
+target_link_libraries(effects arduino_emulator arduino-audio-tools portaudio)
 
