--- a/tests/aac-fdk-encode/CMakeLists.txt
+++ b/tests/aac-fdk-encode/CMakeLists.txt
@@ -20,7 +20,7 @@ if(NOT fdk_aac_POPULATED)
 endif()
 
 # build sketch as executable
-add_executable (aac-fdk-encode aac-fdk-encode.cpp)
+add_executable (aac-fdk-encode aac-fdk-encode.cpp ../main.cpp)
 # use main() from arduino_emulator
 target_compile_definitions(aac-fdk-encode PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_FDK -DIS_DESKTOP)
 
