--- a/tests/aac-helix/CMakeLists.txt
+++ b/tests/aac-helix/CMakeLists.txt
@@ -19,7 +19,7 @@ if(NOT helix_POPULATED)
 endif()
 
 # build sketch as executable
-add_executable (aac-helix aac-helix.cpp)
+add_executable (aac-helix aac-helix.cpp ../main.cpp)
 
 # use main() from arduino_emulator
 target_compile_definitions(aac-helix PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_HELIX -DUSE_PORTAUDIO -DIS_DESKTOP)
