--- a/tests/aac-fdk-encode/CMakeLists.txt
+++ b/tests/aac-fdk-encode/CMakeLists.txt
@@ -21,7 +21,7 @@ endif()
 
 # build sketch as executable
 add_executable (aac-fdk-encode aac-fdk-encode.cpp ../main.cpp)
-# use main() from arduino_emulator
+# set preprocessor defines
 target_compile_definitions(aac-fdk-encode PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_FDK -DIS_DESKTOP)
 
 # specify libraries
