--- a/tests/aac-fdk/CMakeLists.txt
+++ b/tests/aac-fdk/CMakeLists.txt
@@ -21,7 +21,7 @@ endif()
 # build sketch as executable
 add_executable (aac-fdk aac-fdk.cpp ../main.cpp)
 
-# use main() from arduino_emulator
+# set preprocessor defines
 target_compile_definitions(aac-fdk PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_FDK -DUSE_PORTAUDIO -DIS_DESKTOP)
 
 # OS/X might need this setting for core audio
