--- a/tests/mp3-metadata/CMakeLists.txt
+++ b/tests/mp3-metadata/CMakeLists.txt
@@ -13,7 +13,7 @@ endif()
 # build sketch as executable
 add_executable (mp3-metadata mp3-metadata.cpp ../main.cpp)
 
-# use main() from arduino_emulator
+# set preprocessor defines
 target_compile_definitions(mp3-metadata PUBLIC -DEXIT_ON_STOP -DIS_DESKTOP)
 
 # specify libraries
