--- a/tests/url-test/CMakeLists.txt
+++ b/tests/url-test/CMakeLists.txt
@@ -13,7 +13,7 @@ include(FetchContent)
 
 # build sketch as executable
 add_executable (url-test url-test.cpp ../main.cpp)
-# use main() from arduino_emulator
+# set preprocessor defines
 target_compile_definitions(url-test PUBLIC -DARDUINO -DEXIT_ON_STOP -DIS_DESKTOP)
 
 # OS/X might need this setting for core audio
