--- a/tests/mp3-helix/CMakeLists.txt
+++ b/tests/mp3-helix/CMakeLists.txt
@@ -21,7 +21,7 @@ endif()
 
 # build sketch as executable
 add_executable (mp3-helix mp3-helix.cpp ../main.cpp)
-# use main() from arduino_emulator
+# set preprocessor defines
 target_compile_definitions(mp3-helix PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_HELIX -DUSE_PORTAUDIO  -DIS_DESKTOP)
 
 # OS/X might need this setting for core audio
