--- a/tests/mp3-lame/CMakeLists.txt
+++ b/tests/mp3-lame/CMakeLists.txt
@@ -21,7 +21,7 @@ endif()
 
 # build sketch as executable
 add_executable (mp3-lame mp3-lame.cpp ../main.cpp)
-# use main() from arduino_emulator
+# set preprocessor defines
 target_compile_definitions(mp3-lame PUBLIC -DARDUINO -DEXIT_ON_STOP -DUSE_LAME -DUSE_PORTAUDIO -DIS_DESKTOP)
 
 # specify libraries
