--- a/docs/tensorflow/Dockerfile
+++ b/docs/tensorflow/Dockerfile
@@ -10,6 +10,7 @@ WORKDIR /content
 VOLUME /content
 ADD micro_speech_with_lstm_op.ipynb /content
 ADD train_micro_speech_model.ipynb /content
+ADD train_hello_world_model.ipynb /content
 RUN apt-get update && apt-get install git -y && apt-get upgrade -y
 EXPOSE 8888
 CMD ["jupyter", "lab", "--no-browser", "--allow-root", "--ip=0.0.0.0" ]
