--- a/examples/examples-desktop/ogg/CMakeLists.txt
+++ b/examples/examples-desktop/ogg/CMakeLists.txt
@@ -44,7 +44,7 @@ endif()
 add_executable (ogg ogg.cpp)
 
 # set preprocessor defines
-target_compile_definitions(arduino_emulator PUBLIC -DDEFINE_MAIN)
+target_compile_definitions(arduino_emulator PUBLIC -DDEFINE_MAIN -DIS_DESKTOP)
 target_compile_definitions(ogg PUBLIC -DEXIT_ON_STOP)
 
 # OS/X might need this setting for core audio
