--- a/examples/examples-desktop/ogg/CMakeLists.txt
+++ b/examples/examples-desktop/ogg/CMakeLists.txt
@@ -44,9 +44,8 @@ endif()
 add_executable (ogg ogg.cpp)
 
 # set preprocessor defines
-target_compile_definitions(arduino_audio_tools PUBLIC -DIS_DESKTOP)
 target_compile_definitions(arduino_emulator PUBLIC -DDEFINE_MAIN -DIS_DESKTOP)
-target_compile_definitions(ogg PUBLIC -DEXIT_ON_STOP)
+target_compile_definitions(ogg PUBLIC -DEXIT_ON_STOP -DIS_DESKTOP)
 
 # OS/X might need this setting for core audio
 #target_compile_definitions(portaudio PUBLIC -DPA_USE_COREAUDIO=1)
