--- a/tests/generator/CMakeLists.txt
+++ b/tests/generator/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 
 # set the project name
-project(generator)
+project(generator_test)
 set (CMAKE_CXX_STANDARD 11)
 set (DCMAKE_CXX_FLAGS "-Werror")
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
@@ -11,11 +11,11 @@ endif()
 
 
 # build sketch as executable
-add_executable (generator generator.cpp ../main.cpp)
+add_executable (generator_test generator.cpp ../main.cpp)
 
 # set preprocessor defines
-target_compile_definitions(generator PUBLIC -DUSE_PORTAUDIO -DEXIT_ON_STOP -DIS_DESKTOP)
+target_compile_definitions(generator_test PUBLIC -DUSE_PORTAUDIO -DEXIT_ON_STOP -DIS_DESKTOP)
 
 # specify libraries
-target_link_libraries(generator portaudio arduino_emulator arduino-audio-tools)
+target_link_libraries(generator_test portaudio arduino_emulator arduino-audio-tools)
 
