--- a/examples/examples-desktop/ogg/CMakeLists.txt
+++ b/examples/examples-desktop/ogg/CMakeLists.txt
@@ -4,6 +4,10 @@ cmake_minimum_required(VERSION 3.21)
 project(ogg)
 set (CMAKE_CXX_STANDARD 11)
 set (DCMAKE_CXX_FLAGS "-Werror")
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    set (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
+    set (CMAKE_LINKER_FLAGS_DEBUG "${CMAKE_LINKER_FLAGS_DEBUG} -fno-omit-frame-pointer -fsanitize=address")
+endif()
 
 include(FetchContent)
 option(BUILD_SHARED_LIBS "Build using shared libraries" OFF)
